# Project_Delivery_Accelerator_Engine

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  cli.py  docker-compose.yml  project_manager.py  pyproject.toml  server.py  version.py
.github/workflows/: ci.yml
.kiro/steering/: project-context.md
_archive/migration_demo/migration_dashboard_pkg/: server.py
admin/: __init__.py  config.py  guardrails.py  health.py  lifecycle.py
ai_backends/: __init__.py  base.py  bedrock_backend.py  files_only.py  gemini_backend.py  groq_backend.py  ollama_backend.py  openrouter_backend.py  registry.py
contracts/: __init__.py  bus.py  protocols.py  types.py
core/: __init__.py  logging_config.py  paths.py
db/: __init__.py  artifact_store_sql.py  database.py  decision_log.py  hierarchy_store_sql.py  project_store_sql.py
docs/: api-reference.md  architecture.md  architecture_diagram.drawio  getting-started.md
docs/architecture/: refactor-plan.md
docs/planning/: review_workbench_transformation_backlog.json  review_workbench_transformation_backlog.md  sprint_plan.md
docs/test-plans/: data-integrity-checks.md  design-decisions-resolved.md  e2e-test-plan-version-review-proposal-feedback.md  edge-cases-validation-failures.md  flow-validation-step-by-step.md  manual-e2e-test-script.md  s3-regression-test-plan.md  test-checklist-strict.md  ui-validation-scenarios.md
handlers/: __init__.py  admin.py  artifact.py  deepdive.py  diagram.py  hierarchy.py  ingest.py  intelligence.py  presales.py  project.py  proposal.py  review.py
models/: __init__.py  artifact.py  document.py  hierarchy.py  project.py  proposal.py
personas/: __init__.py  deep_dive.py  engine.py
personas/definitions/: architecture_strategy.yaml  data_security_cost.yaml  delivery_manager.yaml  people_capacity.yaml  platform_reliability.yaml  product_owner.yaml  product_value.yaml  resource_manager.yaml  solution_architect.yaml  solution_delivery.yaml
processors/: __init__.py  agent_input.py  artifact_store.py  context_builder.py  diagram_generator.py  feedback_classifier.py  history.py  ingestion.py  phases.py  pipeline.py  presales_feedback.py  presales_finaliser.py  prompt_logger.py  proposal_generator.py  proposals.py  review_quality.py  version_control.py
processors/extractors/: __init__.py  ai_extractor.py  intelligence_extractor.py  patterns.py
processors/parsers/: __init__.py  csv_parser.py  docx_parser.py  email_parser.py  markdown_parser.py  pdf_parser.py  plain_text.py  transcript_parser.py
sample_data/: sample_artefact.md  sample_call_notes.txt  sample_email.txt  sample_transcript.txt
scripts/: migrate_decision_system.py  seed_demo.py  seed_sqlite.py
services/: __init__.py  admin.py  deepdive.py  diagram.py  hierarchy.py  ingest.py  intelligence.py  presales.py  project.py  proposal.py  review.py
static/: feedback.html  index.html
tests/: conftest.py  test_context_builder.py  test_e2e_user_journey.py  test_extraction_quality.py  test_history.py  test_html_static_analysis.py  test_ingestion.py  test_models.py  test_persona_engine.py  test_personas.py  test_proposals_phases.py  test_sample_data.py  test_server.py  test_sprint1_regression.py  test_sprint2_regression.py  test_sprint3_regression.py  test_sprint4_regression.py  test_sprint5_regression.py  test_sprint6_regression.py  test_sprint7_regression.py  test_sprint8_regression.py
