[project]
name = "project-delivery-accelerator"
version = "2.0.0"
description = "Context-aware delivery intelligence platform for structured AI workflows across SDLC"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]
ai = [
    "boto3>=1.28.0",
    "ollama>=0.1.0",
    "google-genai>=1.0.0",
]
agents = [
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["models*", "processors*", "personas*", "ai_backends*"]
exclude = ["tests*", "_archive*", "outputs*"]

[tool.setuptools]
py-modules = ["project_manager", "server", "cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
