[project]
name = "project-delivery-accelerator"
version = "3.3.0"
description = "Decision Intelligence System – Context-aware delivery platform with traceability, repeatability, and explainability"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]
ai = [
    "boto3>=1.28.0",
    "ollama>=0.1.0",
    "google-genai>=1.0.0",
]
docs = [
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
]
agents = [
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["models*", "processors*", "personas*", "ai_backends*", "admin*"]
exclude = ["tests*", "_archive*", "outputs*"]

[tool.setuptools]
py-modules = ["project_manager", "server", "cli", "version"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# E/F/W = pycodestyle + pyflakes, I = isort, UP = pyupgrade, B = flake8-bugbear
select = ["E", "F", "W", "I", "UP", "B"]
# E501 = line too long — enforced by formatter, not linter
ignore = ["E501", "B006", "B007", "UP007"]

[tool.ruff.lint.isort]
known-first-party = [
    "core", "models", "processors", "personas",
    "db", "admin", "ai_backends", "services",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
